fix bug with header titles when message is too long

--- a/static/style.css
+++ b/static/style.css
@@ -359,5 +359,5 @@ footer {
 }
 
 .header-width {
-    max-width: 80px;
+    max-width: min-content;
 }
